--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
         </div>
       </main>
       <aside class="box">
-        <img src="./assets/Munneco.png" alt="" />
+        <textarea cols="100" rows="20" class="encript resultado"></textarea>
+        <div class="contenido-box">
+          <img src="./assets/Munneco.png" alt="" />
 
-        <h2>Ningún mensaje fue encontrado</h2>
+          <h2>Ningún mensaje fue encontrado</h2>
 
-        <p>Ingresa el texto que desees encriptar o desencriptar</p>
+          <p>Ingresa el texto que desees encriptar o desencriptar</p>
+        </div>
+
+        <button class="btn visible copy">Copiar!</button>
       </aside>
     </div>
+
+    <script src="./main.js"></script>
   </body>
 </html>
