--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <aside class="box">
         <textarea cols="100" rows="20" class="encript resultado"></textarea>
         <div class="contenido-box">
-          <img src="./assets/Munneco.png" alt="" />
+          <img src="./assets/Munneco.png" class="munneco" alt="" />
 
           <h2>Ningún mensaje fue encontrado</h2>
 
@@ -49,6 +49,8 @@
         <button class="btn visible copy">Copiar!</button>
       </aside>
     </div>
+
+    <footer>&copy; Copyright 2024 Julian Andres Yepes</footer>
 
     <script src="./main.js"></script>
   </body>
